Split geth role into separate tasks

--- a/skale-nodes/ansible/roles/geth/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/geth/tasks/main.yaml
@@ -1,100 +1,8 @@
-- name: Create geth dir
-  file:
-    state: directory
-    path: "{{ base_path }}/geth-{{ item }}"
-  loop: ["signer"]
+- import_tasks: account.yaml
+  tags: account
 
+- import_tasks: genesis.yaml
+  tags: genesis
 
-- name: Save password
-  copy:
-    dest: "{{ base_path }}/geth-{{ item }}/.password"
-    content: "{{ geth_password }}"
-  loop: ["signer"]
-
-
-- name: Set account container prefix
-  set_fact:
-    account_container_prefix: geth-account
-
-
-- name: Create account
-  docker_container:
-    image: "{{ geth_image }}"
-    name: "{{ account_container_prefix }}-{{ item }}"
-    network_mode: host
-    detach: false
-    output_logs: true
-    volumes:
-      - "{{ base_path }}/geth-{{ item }}:/data"
-    entrypoint: [""]
-    command: ["geth", "--datadir", "/data", "account", "new", "--password", "/data/.password"]
-  loop: ["signer"]
-  register: account_cmd_output
-
-
-- name: Cleanup intermediary containers
-  docker_container:
-    name: "{{ account_container_prefix }}-{{ item }}"
-    state: absent
-  loop: ["signer"]
-
-
-- name: Fetch node names
-  set_fact:
-    node_names: "{{ account_cmd_output | json_query('results[*].container.Name') | replace('/{{ account_container_prefix }}-', '') }}"
-
-
-- name: Fetch node addresses
-  set_fact:
-    node_addresses: [
-      "{{ account_cmd_output | json_query('results[0].container.Output') | regex_search('0x[a-zA-Z0-9]+')}}",
-    ]
-
-- name: Test
-  debug:
-    msg: "{{ node_addresses }}"
-
-- name: Instantiate genesis template
-  template:
-    src: "genesis.json.j2"
-    dest: "{{ base_path }}/geth-{{ item }}/genesis.json"
-  vars:
-    signer: "{{ node_addresses[0] }}"
-  loop: ["signer"]
-
-
-- name: Init geth nodes
-  docker_container:
-    image: "{{ geth_image }}"
-    auto_remove: true
-    name: "geth-{{ item }}-init"
-    entrypoint: ["geth"]
-    volumes:
-      - "{{ base_path }}/geth-{{ item }}:/data"
-    command: ["init", "--datadir", "/data", "/data/genesis.json"]
-  loop: ["signer"]
-
-
-- name: Setup geth signer container
-  docker_container:
-    name: "geth-{{ item }}"
-    image: ethereum/client-go:alltools-v1.13.2
-    state: started
-    memory: 1GB
-    network_mode: host
-    volumes:
-      - "{{ base_path }}/geth-{{ item }}:/data"
-    command: >
-      geth
-      --password /data/.password --verbosity 3 --miner.gaslimit 8000000
-      --networkid 151 --datadir /data
-      --authrpc.port 8552
-      --http --http.vhosts=* --http.corsdomain="*"
-      --netrestrict 127.0.0.1/32
-      --http.api "admin,debug,miner,shh,txpool,personal,eth,net,web3" --http.addr "0.0.0.0" --http.port "1919"
-      --mine
-      --unlock {{ node_addresses[0] }}
-      --allow-insecure-unlock
-      --miner.etherbase={{ node_addresses[0] }}
-      --ws  --ws.origins="*" --ws.addr="0.0.0.0" --ws.port "1920" --ws.api "personal,eth,net,web3"
-  loop: ["signer"]
+- import_tasks: container.yaml
+  tags: container
