--- a/skale-nodes/ansible/roles/deploy_contracts/tasks/manager.yaml
+++ b/skale-nodes/ansible/roles/deploy_contracts/tasks/manager.yaml
@@ -7,14 +7,21 @@
     ENDPOINT: "{{ endpoint }}"
     GAS_PRICE: "{{ deploy_gas_price }}"
     NETWORK: "custom"
-  tags:
-    - deploy_sm
+  tags: deploy_sm
+
+
+- name: Save SM URL to group vars
+  copy:
+    src: "{{ playbook_dir }}/../../helper-scripts/contracts_data/manager.json"
+    dest: "{{ playbook_dir }}/../../helper-scripts/contracts_data/skaleManagerComponents.json"
+  tags: upload_sm
+
 
 - name: Generate random string
   set_fact:
     random_str: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=15') }}"
-  tags:
-    - upload_sm
+  tags: upload_sm
+
 
 - name: Upload SM ABI to S3
   aws_s3:
@@ -22,19 +29,19 @@
     aws_secret_key: "{{ aws_secret }}"
     bucket: "skale-abis"
     src: "{{ playbook_dir }}/../../helper-scripts/contracts_data/manager.json"
-    object: 'skale-manager-abi-{{ manager_tag }}-{{ random_str }}.json'
-    region: 'eu-central-1'
+    object: "skale-manager-abi-{{ manager_tag }}-{{ random_str }}.json"
+    region: "eu-central-1"
     mode: put
     permission: "public-read"
-  tags:
-    - upload_sm
+  tags: upload_sm
   register: url_output
+
 
 - name: Format download URL
   shell:  echo "{{ url_output.url }}" | cut -f1 -d"?"
   register: sm_url
-  tags:
-    - upload_sm
+  tags: upload_sm
+
 
 - name: Show ABIs download URL
   debug:
@@ -43,6 +50,14 @@
   tags:
     - upload_sm
 
+
+- name: Ensure group vars all
+  file:
+    state: touch
+    path: "{{ playbook_dir }}/group_vars/all"
+  tags: upload_sm
+
+
 - name: Save SM URL to group vars
   lineinfile:
     path: "{{ playbook_dir }}/group_vars/all"
@@ -50,5 +65,4 @@
     regexp: '^sm_url:'
     line: "sm_url: {{ sm_url.stdout }}"
     state: present
-  tags:
-    - upload_sm
+  tags: upload_sm
