Fix geth firewall

--- a/skale-nodes/ansible/cleanup_local.yaml
+++ b/skale-nodes/ansible/cleanup_local.yaml
@@ -4,3 +4,8 @@
   serial: 1
   roles:
     - role: cleanup_contracts
+      tags: cleanup_contracts
+
+  roles:
+    - role: cleanup_artifacts
+      tags: cleanup_artifacts
