--- a/skale-nodes/ansible/roles/skale_cli/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/skale_cli/tasks/main.yaml
@@ -1,30 +1,51 @@
-- name: Install requirements
-  command:
-    chdir: "{{ base_path }}/node-cli/"
-    cmd: "pip3 install --ignore-installed PyYAML -e '.'"
+- name: Makedir dist
+  file:
+    state: directory
+    path: "{{ base_path }}/node-cli/dist"
   when: env is defined and env == "dev"
 
-- name: Install setuptools 39-0-1
-  pip:
-    name: setuptools==39.0.1
-    state: forcereinstall
-  tags:
-    pip
 
-- name: Register skale command
+- name: Build binary builder image
+  community.docker.docker_image_build:
+    name: "node-cli-builder"
+    path: "{{ base_path }}/node-cli"
+  when: env is defined and env == "dev"
+
+
+- name: Set build command
   set_fact:
-    skale: "{{ base_path }}/cli-venv/bin/python main.py"
+    build_cmd: "scripts/build.sh test test"
   when: env is defined and env == "dev"
 
-- name: Build skale command
-  command:
-    cmd: "bash scripts/build.sh 0.0.0 test"
-    chdir: "{{ base_path }}/node-cli"
+
+- name: Add sync option
+  set_fact:
+    build_cmd: "{{ build_cmd }} sync"
+  when: env is defined and env == "dev" and sync_node is defined and sync_node == 'True'
+
+
+- name: Build binary
+  docker_container:
+    image: node-cli-builder
+    name: node-cli-builder
+    detach: false
+    volumes:
+      - "{{ base_path }}/node-cli/dist:/app/dist"
+    command: "{{ build_cmd }}"
   when: env is defined and env == "dev"
+
 
 - name: Copy executable to /usr/bin/local
-  copy: remote_src=True src="{{ base_path }}/node-cli/dist/skale-0.0.0-Linux-x86_64" dest=/usr/local/bin/skale
+  copy: remote_src=True src="{{ base_path }}/node-cli/dist/skale-test-Linux-x86_64" dest=/usr/local/bin/skale
   when: env is defined and env == "dev"
+
+
+- name: Remove builder container
+  docker_container:
+    state: absent
+    name: node-cli-builder
+  when: env is defined and env == "dev"
+
 
 - name: Download skale_cli from spaces
   get_url:
@@ -35,11 +56,13 @@
   when: env is defined and env == "test"
   tags: binary
 
+
 - name: Add execute permission to skale executable
   file:
     path: /usr/local/bin/skale
     mode: '0555'
   tags: binary
+
 
 - name: Register skale command
   set_fact:
