--- a/skale-nodes/ansible/roles/geth/tasks/firewall.yaml
+++ b/skale-nodes/ansible/roles/geth/tasks/firewall.yaml
@@ -16,7 +16,7 @@
   when: geth_subnet is not defined
 
 
-- name: Allow connection through essential sgx ports
+- name: Allow connection through geth rpc ports
   ansible.builtin.iptables:
     chain: INPUT
     action: insert
