--- a/skale-nodes/ansible/roles/cleanup_nodes/tasks/containers.yaml
+++ b/skale-nodes/ansible/roles/cleanup_nodes/tasks/containers.yaml
@@ -1,4 +1,26 @@
-- name: Get all skale container ids
+- name: Get monitoring container ids
+  command: 'docker ps -a -q --filter="name=monitoring_"'
+  become: true
+  register: containers_output
+
+
+- name: Split monitoring container ids output
+  register: containers_output
+  set_fact:
+    monitoring_container_ids: "{{ containers_output.stdout.split('\n') }}"
+
+
+- name: Destroy monitoring container ids
+  become: true
+  docker_container:
+    name: "{{ item }}"
+    state: absent
+    force_kill: yes
+    keep_volumes: no
+  with_items: "{{ monitoring_container_ids | default([]) }}"
+
+
+- name: Get all container ids
   command: 'docker ps -a -q --filter="name=skale_"'
   become: true
   register: containers_output
@@ -8,7 +30,7 @@
 - name: Split containers ids output
   register: containers_output
   set_fact:
-    containers_ids: "{{ containers_output.stdout.split('\n') }}"
+    skale_container_ids: "{{ containers_output.stdout.split('\n') }}"
 
 
 - name: Destroy admin container
@@ -28,7 +50,7 @@
     state: absent
     force_kill: yes
     keep_volumes: no
-  with_items: "{{ containers_ids | default([]) }}"
+  with_items: "{{ skale_container_ids | default([]) }}"
 
 
 - name: Prune docker
