--- a/skale-nodes/ansible/cleanup.yaml
+++ b/skale-nodes/ansible/cleanup.yaml
@@ -1,2 +1,4 @@
-# - import_playbook: cleanup_contracts.yaml
 - import_playbook: cleanup_nodes.yaml
+- import_playbook: cleanup_sgx.yaml
+- import_playbook: cleanup_geth.yaml
+- import_playbook: cleanup_local.yaml
